<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addmain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
 <RelativeLayout 
    android:id="@+id/mainAdContainer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    </RelativeLayout>

<RelativeLayout 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_below="@id/mainAdContainer"
    android:id="@+id/mainId"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg1" >

    <TextView
        android:textColor="#000000"
        android:id="@+id/txtEngOne"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/text_style"
        android:padding="5dp"
        android:text="@string/text1a"
        android:textSize="16dp" />

    <TextView
        android:textColor="#000000"
        android:id="@+id/txtChOne"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEngOne"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/text_style"
        android:padding="5dp"
        android:text="@string/text1b"
        android:textSize="16dp" />
    
     <TextView
         android:textColor="#000000"
        android:id="@+id/txtEngTwo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/text_style"
        android:padding="5dp"
        android:visibility="invisible"
        android:text="@string/text2a"
        android:textSize="16dp" />

    <TextView
        android:textColor="#000000"
        android:id="@+id/txtChTwo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEngTwo"
         android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/text_style"
        android:padding="5dp"
        android:visibility="invisible"
        android:text="@string/text2b"
        android:textSize="16dp" />

    <Button
        android:background="@drawable/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textColor="#000000"
        android:id="@+id/remberBtn"
        android:text="@string/remebertThis" />
<Button
  		  android:background="@drawable/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="#000000"
        android:id="@+id/hidenTranslateBtn"
        android:text="@string/hiddenTranslate" />

	<SlidingDrawer
	     android:id="@+id/drawer"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:handle="@+id/handle"
	     android:content="@+id/content">

     <ImageView
	         android:id="@id/handle"
	         android:background="@drawable/arrow"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content" />

     <RelativeLayout
	         android:id="@id/content"
	         android:background="@drawable/drawerbg"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content" >
         	<TextView 
         	    android:id="@+id/j_t"
         	    android:layout_margin="9dp"
         	    android:layout_alignParentTop="true"
         	    android:layout_height="wrap_content"
         	    android:layout_width="fill_parent"
         	    android:gravity="center_horizontal"
         	    android:text="@string/drawer_title"
         	    android:textColor="#000000"
         	    android:textStyle="bold"
         	    android:layout_centerHorizontal="true"
         	    android:textSize="20dp"
         	    />
         	<EditText
         	    android:hint="@string/addnewword"
         	    android:id="@+id/addNewWordBtn"
         	    android:layout_height="wrap_content"
         	    android:layout_width="fill_parent"
         	    android:layout_below="@id/j_t"
         	    android:layout_alignParentLeft="true"
         	    android:layout_margin="6dp"
         	    />
         	<EditText
         	    android:hint="@string/addnewch"
         	    android:id="@+id/addNewChBtn"
         	    android:layout_height="wrap_content"
         	    android:layout_width="fill_parent"
         	    android:layout_below="@id/addNewWordBtn"
         	    android:layout_alignParentLeft="true"
         	    android:layout_margin="6dp"
         	    />
         	<Button
         	    android:textColor="#000000"
         	    android:background="@drawable/draw_btn_style"
         	    android:textSize="15dp"
         	    android:layout_width="wrap_content" 
         	    android:layout_height="wrap_content"
         	    android:layout_below="@id/addNewChBtn"
         	    android:layout_alignParentLeft="true"
         	   	android:text="@string/doAdd"
         	   	android:layout_marginLeft="40dp"
         	   	android:id="@+id/doAddBtn"
         	    />
         	<Button
         	    android:textColor="#000000"
         	    android:textSize="15dp"
         	    android:background="@drawable/draw_btn_style"
         	    android:layout_width="wrap_content" 
         	    android:layout_height="wrap_content"
         	    android:layout_below="@id/addNewChBtn"
         	   	android:text="@string/doClear"
         	   	android:layout_alignParentRight="true"
         	   	android:layout_marginRight="40dp"
         	   	android:id="@+id/doClearBtn"
         	    />
         	
         	<Button
         	    android:textColor="#000000"
         	    android:textSize="13dp"
         	    android:background="@drawable/draw_btn_style"
         	    android:layout_width="wrap_content" 
         	    android:layout_height="wrap_content"
         	   	android:text="@string/doTest"
         	   	android:layout_alignParentBottom="true"
         	   	android:layout_alignParentRight="true"
         	   	android:layout_marginRight="3dp"
         	   	android:layout_marginBottom="4dp"
         	   	android:id="@+id/doTestBtn"
         	    />
         	<Button
         	    android:textColor="#000000"
         	    android:textSize="13dp"
         	    android:background="@drawable/draw_btn_style"
         	    android:layout_width="wrap_content" 
         	    android:layout_height="wrap_content"
         	   	android:text="@string/gotoWordList"
         	   	android:layout_alignParentBottom="true"
         	   	android:layout_alignParentLeft ="true"         	  
         	  	android:layout_marginLeft="3dp"
         	   	android:layout_marginBottom="5dp"
         	   	android:id="@+id/gotoWordList"
         	    />
         	
         </RelativeLayout>
 </SlidingDrawer>
    
</RelativeLayout>
</RelativeLayout>